wp-content/themes/make-experiences/scss/contests.scss
.wpvc_submit_form{
	background: #fff !important;
	.MuiInputBase-input.MuiInput-input {
    	//padding: 0 20px !important;
	}
	.label + .MuiInput-formControl {
		margin-top: 0px !important;
	}
	.MuiButton-containedPrimary {
		background-color: $color-blue;
	}
	.MuiInputLabel-formControl {
	    //transform: translate(0, 10px) scale(1);
	}
}

.single-contestants {
	.contest-back-btn {
		position: absolute;
		right: 15px;
		top: 75px;
		background: #005e9a;
		color: #fff;
		font-size: 18px;
	}
	.wpvc_single_contestant_fullwidth {
		margin-bottom: 0px !important;
	}
	.wpvc_contestantimage, .wpvc_card_conthead_row, .MuiToolbar-gutters, .wpvc_video_contest_player {
		display: none;
	}
	.wpvc_single_prev_button, .wpvc_single_next_button {
		display: flex;
		align-items: center;
		width: 8%;
		justify-content: center;
	}
	#wpvc-singlecustom {
		.wpvc-main-wrapper {
			display: flex;
			flex-flow: column wrap;
			max-height: 1100px;
			.flex-main {
				width: 68%;
				background: white;
				padding: 10px 15px;
				&:first-of-type {
					padding: 0px;
				}
				p { font-size: 18px; }
				.universal-btn {
					width: 100%;
					font-weight: bold;
				}
			}
			.flex-sidebar {
				width: 30%;
				min-height: 100%;
				order: 3;
				background: #f1f1f1;
				padding: 15px;
				margin-left: auto;
			}
			@media screen and (max-width: 768px) {
				display: block;
				max-height: auto;
				.flex-main, .flex-sidebar {
					width: 100%;
				}
			}
			#wpvc-singlecustom-header {
				padding-top: 0px;
				.wpvc_show_style {
					margin-top: 0px !important;
				}
			}
			.wpvc-video {
				.fluid-width-video-wrapper iframe {
					border: 0px;
					background: #000;
			  	}
			}
			.wpvc-profile {
				div {
					padding-bottom: 10px;
					&:last-of-type {
						padding-bottom: 0px;
					}
				}
				.wpvc-profile-social {
					display: flex;
					a {
						font-size: 26px;
						margin-right: 15px;
						.fa-instagram { color: #c13584;}
						.fa-facebook { color: #1877f2;}
						.fa-twitter { color: #1da1f2;}
						.fa-youtube { color: #ff0000;}
						.fa-tiktok { color: #ff0050;}
					 }
				}
			}
			.wpvc-details {
				flex-grow: 1;
			}
		}
		.wpvc-gallery {
			position: relative;
			padding: 15px 0 0 0;
			background: #fafbfd;
			.psgal_wrap {
				display: flex;
				justify-content: space-between;
				flex-wrap: wrap;
				figure {
					flex: 1;
					max-height: 250px;
					min-width: 200px;
					padding: 0px 5px;
					margin-bottom: 10px;
					position: relative;
					z-index: 99;
					&:first-of-type {
						padding-left: 0px;
					}
					&:last-of-type {
						padding-right: 0px;
					}
					span {
						height: 100%;
						overflow: hidden;
						border-radius: 5px;
						display: block;
						img {
							min-height: 100%;
							min-width: 100%;
							object-fit: cover;
						}
					}
				}
			}
			#showAllGallery {
				position: absolute;
				bottom: 5px;
				right: 10px;
				z-index: 99;
			}
		}
		.wpvc-essay {
			background: #FAFBFD;
			position: relative;
			padding-top: 10px;
			padding-bottom: 20px;
			.wpvc-essay-item {
				background: #fff;
				margin: 10px 0;
				padding: 10px 15px;
				border-radius: 5px;
			}
		}
	}
}
// Voted dialog
.MuiDialog-container {
	.wpvc_sucess_popup_title {
		background: $color-blue;
		h6 { color: white; }
	}
	.wpvc_sucess_popup_content {
		background: $color-light-blue !important;
		color: #333;
		.MuiTypography-paragraph {
			margin-bottom: 0px;
		}
	}
	.wpvc_social_icon svg {
		color: $color-blue !important;
	}
}
.wpvc_voting_btns { background: $color-blue !important; }

// Contestant category
.wpvc_show_contestants {
	.wpvc_showcontestant_container {
		margin-top: 0px;
	}
	.wpvc_card_sub_header, .wpvc_vote_counts  { display: none; }
	.wpvc_video_contest_player {
		height: 200px !important;
		.fluid-width-video-wrapper {
			margin: 0px;
		}
	}
	.MuiCard-root.wpvc_card_row {
		height: 100%;
		display: flex;
		flex-direction: column;
		.wpvc_card_content_row {
			height: 100%;
			display: flex;
			flex-direction: column;
			.wpvc_contestant_description {
				margin-top: auto;
			}
		}
		.wpvc_card_actions_row:last-of-type {
			margin-top: auto;
		}
		.wpvc_card_conthead_row a, .wpvc_contestant_description a, .wpvc_social_icon a svg {
			color: $color-blue !important;
		}
	}
}

